grammar.txt
json
  : element

elements
  : 
  | element , elements

element
  : STRING
  | NUMBER
  | TRUE
  | FALSE
  | NULL
  | { members }
  | [ elements ]

members
  : 
  | member , members

member
  : string : element
